src/objects/PagosEspejo__c.object
<CustomObject>
    <description>Objeto que permite la carga de los registros de pagos que serán gestionados por los agentes de SAC</description>
    <fields>
        <fullName>AgendaAtencion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda en atención</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Antiguedad__c</fullName>
        <label>Antiguedad</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApellidoPaterno__c</fullName>
        <label>Apellido Paterno</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BloqueLupa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para relacionar el bloque que se va a gestionar</description>
        <label>Bloque</label>
        <referenceTo>Bloque__c</referenceTo>
        <relationshipLabel>Pagos Espejo</relationshipLabel>
        <relationshipName>Pagos_Espejo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bloque_Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bloque Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bloque__c</fullName>
        <label>Bloque</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CausadeRechazodeCobranza__c</fullName>
        <label>Causa de Rechazo de Cobranza</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion__c</fullName>
        <label>Clasificación</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoProducto__c</fullName>
        <label>Código Producto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correo1__c</fullName>
        <label>Correo1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correo2__c</fullName>
        <label>Correo2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correo3__c</fullName>
        <label>Correo3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiasVencimiento__c</fullName>
        <formula>TODAY() - VencimientoDelRecibo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elegir_Pago__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Elegir Pago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factura__c</fullName>
        <externalId>true</externalId>
        <label>Factura</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FormadePago__c</fullName>
        <label>Forma de Pago</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImportePesos__c</fullName>
        <label>Importe Pesos</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ImportePesos_exto__c</fullName>
        <formula>IF(ImportePesos__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(ImportePesos__c) &gt;= 1000000, TEXT(FLOOR(ABS(ImportePesos__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(ImportePesos__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(ImportePesos__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(ImportePesos__c))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(ImportePesos__c) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(ImportePesos__c) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(ImportePesos__c) , 1), 2) * 100, 99))) &amp;
IF(ImportePesos__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe Pesos Texto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InsertCreaPago__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InsertCreaPago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCuentaPago__c</fullName>
        <description>Permite guardar el número de cuenta del pago</description>
        <label>No Cuenta pago</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NombreCuenta__c</fullName>
        <formula>Poliza__r.Account.FirstName &amp; &quot; &quot; &amp; Poliza__r.Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre de la Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre__c</fullName>
        <label>Nombre</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orden__c</fullName>
        <label>Orden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pagado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar los pagos espejos que se han pagado</description>
        <label>Pagado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PermiteGestion__c</fullName>
        <description>Permite identificar si el registro esta apto para gestión</description>
        <formula>OR (
	AND (	OwnerId = $Setup.ConfiguracionesGenerales__c.IdColaCobranza__c,
		NOT (ISBLANK ( Poliza__r.AccountId)),
		NOT ( Pagado__c),
		NOT (
			OR (
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Desea Cancelar&quot;),
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Cuenta Pagada&quot;),
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Póliza Cancelada&quot;)
			)
		)

	),
	AND (	OwnerId &lt;&gt; $Setup.ConfiguracionesGenerales__c.IdColaCobranza__c,
		NOT (ISBLANK ( Poliza__r.AccountId)),
		OR (
                    ROUND ( ( NOW() - LastModifiedDate) * 1440, 0) &gt; 10,
                    ISBLANK (TEXT(Resultado_de_Contacto__c))
                ),
		NOT ( Pagado__c),
		NOT (
			OR (
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Desea Cancelar&quot;),
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Cuenta Pagada&quot;),
				ISPICKVAL (Resultado_de_Contacto__c, &quot;Póliza Cancelada&quot;)
		           )
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permite gestion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Poliza__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Póliza</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Pagos Espejo</relationshipLabel>
        <relationshipName>Pagos_Espejo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <label>Producto</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Puntos__c</fullName>
        <label>Monto Puntos Bancomer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RespuestadeCobranza__c</fullName>
        <label>Respuesta de Cobranza</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resultado_de_Contacto__c</fullName>
        <description>Identifica el resultado de contacto</description>
        <label>Resultado de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promesa de Pago</fullName>
                </value>
                <value>
                    <fullName>No Define Pago</fullName>
                </value>
                <value>
                    <fullName>Desea Cancelar</fullName>
                </value>
                <value>
                    <fullName>No Reconoce Producto</fullName>
                </value>
                <value>
                    <fullName>Contestadora</fullName>
                </value>
                <value>
                    <fullName>Deja Mensaje</fullName>
                </value>
                <value>
                    <fullName>Titular Fallecio</fullName>
                </value>
                <value>
                    <fullName>Se Agenda</fullName>
                </value>
                <value>
                    <fullName>No Contesta</fullName>
                </value>
                <value>
                    <fullName>Cuenta Pagada</fullName>
                </value>
                <value>
                    <fullName>Póliza Cancelada</fullName>
                </value>
                <value>
                    <fullName>Ilocalizable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semaforo__c</fullName>
        <label>Semáforo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_10__c</fullName>
        <label>Teléfono 10</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_1__c</fullName>
        <label>Teléfono 1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Teléfono 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TienePoliza__c</fullName>
        <formula>if (  ISBLANK(Poliza__c) , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiene Poliza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TipoResultadoContacto__c</fullName>
        <label>Tipo de resultado de contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pago TPV</fullName>
                    <default>true</default>
                    <label>Pago TPV</label>
                </value>
                <value>
                    <fullName>Endoso</fullName>
                </value>
                <value>
                    <fullName>Pago TPV / Endoso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VencimientoDelRecibo__c</fullName>
        <label>Vencimiento Del Recibo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>importeDolares__c</fullName>
        <label>importe Dólares</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pagos Espejo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Todos</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPE - {0000}</displayFormat>
        <label>Consecutivo Pagos Espejo No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagos Espejo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>